<resources>
    <string name="app_name">Unit Conversion</string>
    <string name="length">Length</string>
    <string name="conversion_make_simple">Conversion Make Simple</string>
    <string name="todo">TODO</string>
    <string name="conversion_of_inches_to_mm">Conversion of Inches To MM</string>
    <string name="_12">12</string>
    <string name="result">Result</string>
    <string name="show">Show</string>
    <string name="conversion_of_millimeter_to_inches">Conversion of MilliMeter To Inches</string>
    <string name="conversion_of_millimeter_to_inche">conversion of millimeter to inches</string>
    <string name="conversion_of_temperature">Conversion Of Temperature</string>
    <string name="c_value">C Value</string>
    <string name="fahrenheit_value">Fahrenheit Value</string>
    <string name="celsius_value">Celsius Value</string>
    <string name="kelvin_value">Kelvin Value</string>
    <string name="k_value">K Value</string>
    <string name="find_values">Find Values</string>
    <string name="developed_by_syab_ahamd_n_support_us_by_sharing_this_application">Developed By: Syab Ahamd\n Support us By Sharing this Application</string>
    <string name="clear_all">Clear All</string>
    <string name="f_value">F Value</string>
    <string name="mass_conversion">Mass Conversion</string>
    <string name="gram_to_ounces">gram to ounces</string>
    <string name="metric_tons_to_tons">Metric tons to tons</string>
    <string name="tons_to_metric_tons">Tons to metric tons</string>
    <string name="back">Back</string>
    <string name="gram_to_centigram">gram to centigram</string>
    <string name="ounces_to_gram">Ounces to gram</string>
    <string name="centigram_to_gram">Centigram to gram</string>
    <string name="pounds_to_kilogram">Pounds to kilogram</string>
    <string name="kilograms_to_pounds">Kilograms to pounds</string>
</resources>