<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/conversion_of_temperature"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="650dp"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/celsius_value"
            android:textAlignment="center"
            android:textSize="32sp" />


        <EditText
            android:id="@+id/celsiusValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:hint="@string/c_value"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/fahrenheit_value"
            android:textAlignment="center"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/fahrenheitValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:gravity="center_horizontal"
            android:hint="@string/f_value"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColorHint="#757575"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/kelvin_value"
            android:textAlignment="center"
            android:textSize="32sp" />


        <EditText
            android:id="@+id/kelvinValue"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center_horizontal"
            android:hint="@string/k_value"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/findTempValues"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:backgroundTint="@color/white"
            android:text="@string/find_values"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:targetApi="lollipop" />

        <Button
            android:id="@+id/clearAllTemp"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:backgroundTint="@color/white"
            android:text="@string/clear_all"
            android:textColor="@color/black"
            android:textSize="32sp"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/backToMainManu"
            android:layout_width="411dp"
            android:layout_height="68dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="89dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/developed_by_syab_ahamd_n_support_us_by_sharing_this_application"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.983" />


</androidx.constraintlayout.widget.ConstraintLayout>